data/derived/sp14/progs/unify/prog1541.ml.out
Characters 203-204:
  | Sigmoid a        -> 1/.(1- exp (-1*.a))
                        ^
Error: This expression has type int but an expression was expected of type
         float
